--- a/ProyectoFinal/src/app/components/logo-ar/logo-ar.component.html
+++ b/ProyectoFinal/src/app/components/logo-ar/logo-ar.component.html
@@ -2,15 +2,15 @@
 
   <div class="container">
     <div class="logo">
-      <img src="../../../../../../../ProyectoFinal/ProyectoFinal/src/assets/Logo.png" id="logoarg">
+      <img ngSrc="assets/Logo.png" id="logoarg" alt="" height="559" width="914">
     </div>
     <div class="redes">
-      <a href=""><img src="../../../../../../../ProyectoFinal/ProyectoFinal/src/assets/facebook.png" id="facebook"></a>
-      <a href=""><img src="../../../../../../../ProyectoFinal/ProyectoFinal/src/assets/github.png" id="github"></a>
-      <a href=""><img src="../../../../../../../ProyectoFinal/ProyectoFinal/src/assets/instagram.png" id="instagram"></a>
-      <a href=""><img src="../../../../../../../ProyectoFinal/ProyectoFinal/src/assets/linkedin.png" id="linkedin"></a>
-      <a href=""><img src="../../../../../../../ProyectoFinal/ProyectoFinal/src/assets/twitter.png" id="twitter"></a>
-      <button type="button" class="btn btn-outline-primary">Ingreso</button>
+      <a href=""><img ngSrc="assets/facebook.png" id="facebook" alt=""></a>
+      <a href=""><img ngSrc="assets/github.png" id="github" alt=""></a>
+      <a href=""><img src="assets/instagram.png" id="instagram" alt=""></a>
+      <a href=""><img src="assets/linkedin.png" id="linkedin" alt=""></a>
+      <a href=""><img src="assets/twitter.png" id="twitter" alt=""></a>
+      <button type="button" class="btn btn-outline-primary" alt="">Ingreso</button>
     </div>
   </div>
 </div>
