--- a/ProyectoFinal/src/app/components/logo-ar/logo-ar.component.html
+++ b/ProyectoFinal/src/app/components/logo-ar/logo-ar.component.html
@@ -2,15 +2,15 @@
 
   <div class="container">
     <div class="logo">
-      <img ngSrc="assets/Logo.png" id="logoarg" alt="" height="559" width="914">
+      <img ngSrc="assets/Logo.png" id="logoarg" alt="" fill>
     </div>
     <div class="redes">
-      <a href=""><img ngSrc="assets/facebook.png" id="facebook" alt=""></a>
-      <a href=""><img ngSrc="assets/github.png" id="github" alt=""></a>
-      <a href=""><img src="assets/instagram.png" id="instagram" alt=""></a>
-      <a href=""><img src="assets/linkedin.png" id="linkedin" alt=""></a>
-      <a href=""><img src="assets/twitter.png" id="twitter" alt=""></a>
-      <button type="button" class="btn btn-outline-primary" alt="">Ingreso</button>
+      <a href=""><img ngSrc="assets/facebook.png" id="facebook" alt="" fill></a>
+      <a href=""><img ngSrc="assets/github.png" id="github" alt="" fill></a>
+      <a href=""><img ngSrc="assets/instagram.png" id="instagram" alt="" fill></a>
+      <a href=""><img ngSrc="assets/linkedin.png" id="linkedin" alt="" fill></a>
+      <a href=""><img ngSrc="assets/twitter.png" id="twitter" alt="" fill></a>
+      <button type="button" class="btn btn-outline-primary" >Ingreso</button>
     </div>
   </div>
 </div>
