--- a/ProyectoFinal/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProyectoFinal/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-    <img ngSrc="assets/1682460026727.jpg" class="img-fluid" id="fotoPerfil" alt="" height="3880" width="5184">
+    <img src="assets/1682460026727.jpg" class="img-fluid" id="fotoPerfil">
 
   </div>
   <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
