--- a/ProyectoFinal/FrontEnd/src/app/components/proyectos/proyectos.component.html
+++ b/ProyectoFinal/FrontEnd/src/app/components/proyectos/proyectos.component.html
@@ -7,7 +7,7 @@
 
     </div>
     <div class="col-sm-12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
-      <img src="../../../../../../../ProyectoFinal/ProyectoFinal/src/assets/database_thumb.jpg" class="img-fluid img-proy">
+      <img src="assets/database_thumb.jpg" class="img-fluid img-proy">
     </div>
   </div>
 </div>
