--- a/ProyectoFinal/FrontEnd/src/app/components/educacion/educacion.component.html
+++ b/ProyectoFinal/FrontEnd/src/app/components/educacion/educacion.component.html
@@ -1,30 +1,31 @@
 <div class="row">
   <h1>Educacion</h1>
-  <div class="col-lg-1"></div>
-  <div class="col-lg-11">
-    <ul>
-      <li>
-        <h1>Estudio 1</h1> -
-        <h3>años</h3>
-      </li>
-      <p>Cras rutrum purus quis purus consectetur varius. Donec tristique venenatis viverra. Praesent sit amet nunc in felis laoreet varius. Cras pretium, eros volutpat vulputate aliquam, augue mi vestibulum nisl, sit amet congue orci nisi quis elit. Aliquam a luctus felis. Proin tempor tristique urna eu facilisis. Praesent tempus faucibus nisl.</p>
-
-    </ul>
-    <ul>
-      <li>
-        <h1>Estudio 2</h1> -
-        <h3>años</h3>
-      </li>
-      <p>Cras rutrum purus quis purus consectetur varius. Donec tristique venenatis viverra. Praesent sit amet nunc in felis laoreet varius. Cras pretium, eros volutpat vulputate aliquam, augue mi vestibulum nisl, sit amet congue orci nisi quis elit. Aliquam a luctus felis. Proin tempor tristique urna eu facilisis. Praesent tempus faucibus nisl.</p>
-
-    </ul>
-    <ul>
-      <li>
-        <h1>Estudio 3</h1> -
-        <h3>años</h3>
-      </li>
-      <p>Cras rutrum purus quis purus consectetur varius. Donec tristique venenatis viverra. Praesent sit amet nunc in felis laoreet varius. Cras pretium, eros volutpat vulputate aliquam, augue mi vestibulum nisl, sit amet congue orci nisi quis elit. Aliquam a luctus felis. Proin tempor tristique urna eu facilisis. Praesent tempus faucibus nisl.</p>
-
-    </ul>
+  <div class="col-lg-2">
+    <button type="button" class="btn btn-dark" routerLink="/nuevaedu" *ngIf="isLogged">
+      Agregar Educacion
+    </button>
   </div>
+
+  <div class="col lg 1"></div>
+  <div class="col-lg-11">
+    <table class="table">
+      <tbody>
+      <tr *ngFor="let Educacion of educacion">
+        <td>
+          <h2>{{Educacion.nombreE}}</h2>
+        </td>
+        <td>{{Educacion.descripcionE}}</td>
+        <td *ngIf="isLogged">
+          <button class="btn btn-light" routerLink="/editedu/{{Educacion.id}}">
+            <i class="bi bi-pencil-fill"></i> EDITAR</button>
+        </td>
+        <td *ngIf="isLogged">
+          <button class="btn btn-danger" (click)="delete(Educacion.id)">
+            <i class="bi bi-trash-fill"></i> BORRAR</button>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+
 </div>
