--- a/ProyectoFinal/FrontEnd/src/app/components/experiencia/experiencia.component.html
+++ b/ProyectoFinal/FrontEnd/src/app/components/experiencia/experiencia.component.html
@@ -1,30 +1,31 @@
 <div class="row">
-  <h1>Experiencia Laboral</h1>
-  <div class="col-lg-1"></div>
-  <div class="col-lg-11">
-    <ul>
-      <li>
-        <h1>trabajo 1</h1> -
-        <h3>años</h3>
-      </li>
-      <p>Cras rutrum purus quis purus consectetur varius. Donec tristique venenatis viverra. Praesent sit amet nunc in felis laoreet varius. Cras pretium, eros volutpat vulputate aliquam, augue mi vestibulum nisl, sit amet congue orci nisi quis elit. Aliquam a luctus felis. Proin tempor tristique urna eu facilisis. Praesent tempus faucibus nisl.</p>
-
-    </ul>
-    <ul>
-      <li>
-        <h1>trabajo 2</h1> -
-        <h3>años</h3>
-      </li>
-      <p>Cras rutrum purus quis purus consectetur varius. Donec tristique venenatis viverra. Praesent sit amet nunc in felis laoreet varius. Cras pretium, eros volutpat vulputate aliquam, augue mi vestibulum nisl, sit amet congue orci nisi quis elit. Aliquam a luctus felis. Proin tempor tristique urna eu facilisis. Praesent tempus faucibus nisl.</p>
-
-    </ul>
-    <ul>
-      <li>
-        <h1>trabajo 3</h1> -
-        <h3>años</h3>
-      </li>
-      <p>Cras rutrum purus quis purus consectetur varius. Donec tristique venenatis viverra. Praesent sit amet nunc in felis laoreet varius. Cras pretium, eros volutpat vulputate aliquam, augue mi vestibulum nisl, sit amet congue orci nisi quis elit. Aliquam a luctus felis. Proin tempor tristique urna eu facilisis. Praesent tempus faucibus nisl.</p>
-
-    </ul>
+  <h1>Experiencia laboral</h1>
+  <div class="col-lg-2">
+    <button type="button" class="btn btn-dark" routerLink="/nuevaexp" *ngIf="isLogged">
+      Nueva Experiencia
+    </button>
   </div>
+
+  <div class="col lg 1"></div>
+  <div class="col-lg-11">
+    <table class="table">
+      <tbody>
+      <tr *ngFor="let Experiencia of expe">
+        <td>
+          <h2>{{Experiencia.nombreE}}</h2>
+        </td>
+        <td>{{Experiencia.descripcionE}}</td>
+        <td *ngIf="isLogged">
+          <button class="btn btn-light" routerLink="/editexp/{{Experiencia.id}}">
+            <i class="bi bi-pencil-fill"></i> EDITAR</button>
+        </td>
+        <td *ngIf="isLogged">
+          <button class="btn btn-danger" (click)="delete(Experiencia.id)">
+            <i class="bi bi-trash-fill"></i> BORRAR</button>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+
 </div>
